--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>This is a sample page</title>
   </head>
   <body>
-    <p>Beep boop Beep boop</p>
+    <p>Beep boop Beep boop 2</p>
   </body>
 </html>
   
